Removed old image files, removed icon attribution in footer, added min width to avoid overlap when minimising browser

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,10 @@ body {
 .card {
   padding: 40px 40px 20px 40px;
   max-width: 700px;
+  min-width: 650px;
   margin: 0 auto;
   border-radius: 8px;
+  position: relative;
 }
 
 form {
@@ -62,8 +64,8 @@ form {
 .main-image {
   position: relative;
   float: left;
-  bottom: 20px;
-  right: -30px;
+  bottom: 18px;
+  right: -10px;
 }
 
 .row {
@@ -73,7 +75,7 @@ form {
 ul {
   list-style: none;
   line-height: 2;
-  padding-top: 25px;
+  padding-top: 20px;
   columns: 2;
 }
 
@@ -110,29 +112,15 @@ ul {
   opacity: 0.5;
 }
 
-.footer-signature,
-.footer-attribution {
+.footer-signature {
   text-align: right;
   color: #676768;
-}
-
-footer {
-  padding-top: 50px;
-}
-
-.footer-signature {
   font-size: 12px;
-  padding-top: 40px;
+  padding: 80px 0px 10px 0px;
   font-weight: 550;
 }
 
-.footer-attribution {
-  font-size: 9px;
-  padding-top: 5px;
-}
-
-#github-link,
-#attribution-link {
+#github-link {
   color: #6d15f2;
   text-decoration: none;
 }
